<resources>
    <string name="app_name">WiFi Meeting</string>
    <string name="app_desc">Attend, Communicate, and Supervise</string>

    <!--   Actions-->
    <string name="startup_message">How do you want to interact?</string>
    <string name="create_new">Create New</string>
    <string name="join_existing">Join Existing</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="leave">Leave</string>
    <string name="select_members">Select Members</string>
    <string name="select_group">Select Group</string>
    <string name="select_module">Select Module</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="join_lecture">Join Lecture</string>
    <string name="start_lecture">Start Lecture</string>
    <string name="confirm">Confirm</string>
    <string name="leave_lecture_session_confirmation">Are you sure you want to leave lecture session?</string>
    <string name="leave_discussion_group_confirmation">Are you sure you want to leave discussion group?</string>

    <!--    Error Messages-->
    <string name="port_mandatory">Port is required</string>
    <string name="student_name_mandatory">Student name is required</string>
    <string name="module_code_mandatory">Module Code is required</string>
    <string name="group_name_mandatory">Group name is required</string>
    <string name="group_mandatory">Group is required</string>
    <string name="module_required">Module is required</string>
    <string name="members_mandatory">Members are required</string>
    <string name="max_count_exceeded">Maximum count exceeded</string>
    <string name="user_name_mandatory">Username is required</string>
    <string name="password_mandatory">Password is required</string>
    <string name="error_password">Password character count exceeded</string>
    <string name="lecturer_name_mandatory">Lecturer name is required</string>
    <string name="not_wifi_connected">Wi-Fi Connection is required</string>
    <string name="login_failed">Login Failed!</string>
    <string name="permission_mandatory">Permission Required!</string>
    <string name="multicast_group_address_mandatory">Multicast Group Address Required</string>
    <string name="multicast_group_address_validation_error">Multicast Group Address INVALID or already OCCUPIED</string>
    <string name="group_does_not_exist">Group does not exist!</string>
    <string name="module_does_not_exist">Module does not exist!</string>
    <string name="admin_end_meeting">Admin End the Group Discussion!</string>
    <string name="lecture_session_ended">Lecture Session Ended!</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="student">Student</string>
    <string name="lecturer">Lecturer</string>
    <string name="port">Port</string>
    <string name="student_name">Student Name</string>
    <string name="lecturer_name">Lecturer Name</string>
    <string name="module_code">Module Code</string>
    <string name="small_group_discussion">Small Group Discussion</string>
    <string name="group_name">Group Name</string>
    <string name="multicast_group_address">Multicast Group Address</string>
    <string name="or">or</string>
    <string name="member_name">Member Name</string>
    <string name="module_name">Module Name</string>
</resources>
