<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/parent_page_padding"
    >

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/login_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.WifiMeeting.AppName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_desc"
        android:textAppearance="@style/TextAppearance.WifiMeeting.AppDesc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/startup_message"
            android:textAppearance="@style/TextAppearance.WifiMeeting.AppAction"
            android:layout_above="@id/student_button"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lecturer_button"
            style="@style/Widget.WifiMeeting.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/lecturer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/student_button"
            style="@style/Widget.WifiMeeting.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/lecturer_button"
            android:layout_marginBottom="10dp"
            android:text="@string/student" />
    </RelativeLayout>
</LinearLayout>
