<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/parent_page_padding"
    tools:context=".page.GroupDiscussionLobbyPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.WifiMeeting.TextInputLayout.HintText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/group_name_text_input"
        style="@style/Widget.WifiMeeting.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topic_below_padding"
        android:hint="@string/group_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/group_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/multicast_group_address_text_input"
        style="@style/Widget.WifiMeeting.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/multicast_group_address"
        app:errorEnabled="true"
        app:endIconDrawable="@drawable/baseline_refresh_24"
        app:endIconMode="custom"
        app:endIconTint="@color/colorPrimaryDark"
        app:endIconCheckable="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/multicast_group_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        style="@style/Widget.WifiMeeting.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/create" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/boarder"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/or"
            android:textAllCaps="true"
            android:translationZ="1dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/topic_below_padding"
            android:layout_marginBottom="@dimen/topic_below_padding"
            android:background="@color/colorPrimary" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_existing"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.WifiMeeting.TextInputLayout.HintText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_group_text_input"
        style="@style/Widget.WifiMeeting.DropDownLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topic_below_padding"
        android:hint="@string/select_group"
        app:startIconDrawable="@drawable/baseline_group_add_24"
        app:startIconTint="@color/textColorPrimary"
        >

        <AutoCompleteTextView
            android:id="@+id/select_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:enabled="true"
            android:inputType="none"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_button"
        style="@style/Widget.WifiMeeting.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/join" />


</LinearLayout>