<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/parent_page_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/student_name_text_input"
        style="@style/Widget.WifiMeeting.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_module_text_input"
        style="@style/Widget.WifiMeeting.DropDownLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_module"
        app:startIconDrawable="@drawable/baseline_local_library_24"
        app:startIconTint="@color/textColorPrimary">

        <AutoCompleteTextView
            android:id="@+id/select_module"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:enabled="true"
            android:focusable="true"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_lecture_button"
        style="@style/Widget.WifiMeeting.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/join_lecture" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/small_group_discussion_button"
        style="@style/Widget.WifiMeeting.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/small_group_discussion" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/classroom" />

</LinearLayout>
