<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/parent_page_padding">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/professor"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lecturer_name_text_input"
        style="@style/Widget.WifiMeeting.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/lecturer_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lecturer_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/module_code_text_input"
        style="@style/Widget.WifiMeeting.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/module_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/module_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/multicast_group_address_text_input"
        style="@style/Widget.WifiMeeting.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/multicast_group_address"
        app:errorEnabled="true"
        app:endIconDrawable="@drawable/baseline_refresh_24"
        app:endIconMode="custom"
        app:endIconTint="@color/colorPrimaryDark"
        app:endIconCheckable="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/multicast_group_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_lecture_button"
        style="@style/Widget.WifiMeeting.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/start_lecture" />

</LinearLayout>
